--- a/PassInTheColor/Config/DefaultEngine.ini
+++ b/PassInTheColor/Config/DefaultEngine.ini
@@ -1,10 +1,6 @@
 [URL]
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Mobile
-DefaultGraphicsPerformance=Scalable
-
 [/Script/Engine.RendererSettings]
-r.MobileHDR=False
+r.MobileHDR=True
 r.Mobile.DisableVertexFog=False
 r.Shadow.CSM.MaxMobileCascades=2
 r.MobileMSAA=1
@@ -28,14 +24,14 @@ r.DistanceFieldBuild.EightBit=False
 r.GenerateLandscapeGIData=True
 r.DistanceFieldBuild.Compress=False
 r.TessellationAdaptivePixelsPerTriangle=48.000000
-r.SeparateTranslucency=False
+r.SeparateTranslucency=True
 r.TranslucentSortPolicy=0
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=False
-r.DefaultFeature.Bloom=False
-r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.Bloom=True
+r.DefaultFeature.AmbientOcclusion=True
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Method=0
@@ -75,21 +71,27 @@ r.SkinCache.SceneMemoryLimitInMB=128.000000
 r.GPUSkin.Limit2BoneInfluences=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/Template_Default.Template_Default
+EditorStartupMap=/Game/Map/BasicLevel.BasicLevel
 LocalMapOptions=
 TransitionMap=None
-bUseSplitscreen=False
+bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Entry.Entry
+GameDefaultMap=/Game/Map/BasicLevel.BasicLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
-bExplicitCanvasChildZOrder=True
+bExplicitCanvasChildZOrder=False
+
+[/Script/HardwareTargeting.HardwareTargetingSettings]
+TargetedHardwareClass=Desktop
+AppliedTargetedHardwareClass=Desktop
+DefaultGraphicsPerformance=Scalable
+AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -131,5 +133,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
