--- a/PassInTheColor/PassInTheColor.uproject
+++ b/PassInTheColor/PassInTheColor.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "PassInTheColor",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"UMG"
+			]
 		}
 	]
 }
