Game HUD Added some problem in map calculation

--- a/PassInTheColor/Config/DefaultEngine.ini
+++ b/PassInTheColor/Config/DefaultEngine.ini
@@ -81,7 +81,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Map/BasicLevel.BasicLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/Blueprints/PassInTheColorGameModeBase_BP.PassInTheColorGameModeBase_BP_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
@@ -133,5 +133,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
