Main Menu, Instructions, Ranking and save game added

--- a/PassInTheColor/Config/DefaultEngine.ini
+++ b/PassInTheColor/Config/DefaultEngine.ini
@@ -71,7 +71,7 @@ r.SkinCache.SceneMemoryLimitInMB=128.000000
 r.GPUSkin.Limit2BoneInfluences=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Map/BasicLevel.BasicLevel
+EditorStartupMap=/Game/Map/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -79,7 +79,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Map/BasicLevel.BasicLevel
+GameDefaultMap=/Game/Map/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/PassInTheColorGameModeBase_BP.PassInTheColorGameModeBase_BP_C
 GlobalDefaultServerGameMode=None
@@ -133,4 +133,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
