Package Game to Gamejam Playbor 2017 (09/09/2017)

--- a/PassInTheColor/Config/DefaultGame.ini
+++ b/PassInTheColor/Config/DefaultGame.ini
@@ -1,2 +1,15 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C31202E94421227E87EC2E9AB57EAC8B
+Description=Pass Color Game
+ProjectName=PassColor
+CompanyName=Caveman Games
+CompanyDistinguishedName=Caveman Games
+Homepage="http://cavemangames.twistereventos.com"
+SupportContact=cavemangames@outlook.com
+CopyrightNotice=Caveman Games Copyright 2017
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+ForDistribution=False
+BuildConfiguration=PPBC_Development
+FullRebuild=True
+
